test login if user is disabled