@@ -14,9 +14,8 @@ public class UserTestData {
     public static final MatcherFactory.Matcher<UserTo> USER_TO_MATCHER = MatcherFactory.usingIgnoringFieldsComparator(UserTo.class, "password");
 
     public static final int USER_ID = 1;
-
     public static final int ADMIN_ID = 2;
-
+    public static final int DISABLED_ID = 3;
     public static final int NOT_FOUND = 1000;
 
     public static final String USER_EMAIL = "user@yandex.ru";
@@ -25,18 +24,20 @@ public class UserTestData {
     public static final String ADMIN_EMAIL = "admin@gmail.com";
     public static final String ADMIN_PHONE = "79251112233";
 
+    public static final String DISABLED_EMAIL = "disabled@gmail.com";
+    public static final String DISABLED_PHONE = "79251112244";
 
     public static final Address userAddress = new Address("Россия", "Москва", "Москва", "главная д.5", "123456");
-
     public static final UserInfo userInfo = new UserInfo("Pupkin", USER_PHONE, userAddress);
-
-    public static final User user = new User(USER_ID, "User", USER_EMAIL, "password", userInfo, new Notice(true, true), true, LocalDateTime.now(), Collections.singleton(Role.USER));
+    public static final User user = new User(USER_ID, "User", USER_EMAIL, "password", userInfo, new Notice(true, true), true, LocalDateTime.now(), Set.of(Role.USER));
 
     public static final Address adminAddress = new Address("Россия", "Одинцово", "Московская обл.", "вторая д.10", "123456");
-
     public static final UserInfo adminInfo = new UserInfo("Sidorov", ADMIN_PHONE, adminAddress);
-
     public static final User admin = new User(ADMIN_ID, "Admin", ADMIN_EMAIL, "admin", adminInfo, new Notice(true, true), true, LocalDateTime.now(), Set.of(Role.ADMIN, Role.USER));
+
+    public static final Address disabledAddress = new Address("Россия", "Одинцово", "Московская обл.", "вторая д.10", "123456");
+    public static final UserInfo disabledInfo = new UserInfo("Sidorov", DISABLED_PHONE, disabledAddress);
+    public static final User disabled = new User(DISABLED_ID, "Disabled", DISABLED_EMAIL, "123456", disabledInfo, new Notice(true, true), false, LocalDateTime.now(), Set.of(Role.USER));
 
     public static User getNew() {
         return new User(null, "New", "new@gmail.com", "newPass", Role.USER);
